# AutoUnsubscriber

./: .editorconfig  .gitignore  .gitmodules  .jscpd.json  Dockerfile  README.md  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  run-poetry-update.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate-config.js
.github/workflows/: docker-image.yml  keep-github-actions-alive.yml  lint-mypy.yml  linter-docker.yml  linter-shell.yml  megalinter.yml  reformat-code.yml  renovate.yml  secret-scanner.yml  update-requirements-txt.yml
src/autounsubscriber/: AutoUnsubscriber.py  MailAutoUnsibscribe.py  MailAutoUnsubscribe.py
src/test/: docker-compose.yml  integration_test.py
